feat: tracex 492 hierarchical filtering on backend (#311)
Co-authored-by: Maximilian Wesener <124587888+ds-mwesener@users.noreply.github.com>